# pok3r_re_firmware

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  FindLibUSB-1.0.cmake  FindLibUSB.cmake  Makefile  README.md  main.cpp  pok3r-buspirate.cfg  pok3r.cpp  pok3r.h
disassemble/: .gdb_history  build.sh  descriptors.h  firmware117.txt  firmware_builtin.txt  functions.txt  functions117.txt  fw117.out  fw117.tmp.s  fw117.txt  reas.sh  sram-map.txt  sram-variables117.txt  symbols117.txt  unas.sh  variables117.txt  vma0.ld  vma2c.ld  vma32.ld  vma34.ld
disassemble/builtin/: firmware_builtin.txt  sram-variables_builtin.txt  symbols_builtin.txt
disassemble/builtin_rgb/: firmware_builtin_rgb.txt  sram-variables_builtin_rgb.txt  symbols_builtin_rgb.txt
disassemble/core/: firmware_v104.txt
disassemble/core/builtin_core/: firmware_builtin_core.txt  symbols_builtin_core.sym  vortex_core_builtin.s  vortex_core_builtin_ref.s
disassemble/core/v104/: firmware_v104.txt  patch_v104.txt
disassemble/core/v145/: core_v145.s  core_v145.sym  core_v145_ref.s
disassemble/cypher/v136/: cypher_v136.sym  cypher_v136_ref.s
disassemble/md200/bootloader/: md200_bootloader.sym  md200_bootloader.txt  md200_bootloader_ref.s
disassemble/md200/v112/: md200_v112.sym  md200_v112_ref.s
disassemble/md600/v148/: md600_v148.sym  md600_v148_ref.s
disassemble/pok3r/builtin/: data_builtin.sym  firmware_builtin.s  firmware_builtin.txt  firmware_builtin_ref.s  sram-variables_builtin.txt  symbols_builtin.sym
disassemble/pok3r/v117/: data_v117.sym  firmware_v117.s  firmware_v117.txt  patch_v117.txt  pok3r_v117.s  pok3r_v117_ref.s  sram-variables_v117.txt  symbols_v117.sym  symbols_v117.txt
disassemble/pok3r_rgb/builtin_rgb/: data_builtin_rgb.sym  firmware_builtin_rgb.s  firmware_builtin_rgb.txt  firmware_builtin_rgb_ref.s  sram-variables_builtin_rgb.txt  symbols_builtin_rgb.sym
disassemble/pok3r_rgb/v130/: data_v130.sym  firmware_v130.s  firmware_v130.txt  fw_xor_decode.c  patch_v130.txt  pok3r_rgb_v130p.s  symbols_v130.sym  symbols_v130.txt
disassemble/pok3r_rgb/v140/: pok3r_rgb_v140.s  pok3r_rgb_v140.sym  pok3r_rgb_v140_2.s  pok3r_rgb_v140_ref.s
disassemble/pok3r_rgb2/bootloader/: rgb2_bootloader.sym  rgb2_bootloader_ref.s
disassemble/pok3r_rgb2/v105/: rgb2_v105.s  rgb2_v105.sym  rgb2_v105_ref.s
disassemble/race/bootloader/: race_bootloader.s  race_bootloader.sym  race_bootloader_ref.s
disassemble/race/v124/: race_v124.sym  race_v124_ref.s
disassemble/race3/bootloader/: race3_bootloader_ref.s  symbols.sym
disassemble/race3/v124/: race_v124.s  symbols.sym
disassemble/v117/: firmware117.txt  firmware_v117.txt  sram-variables117.txt  sram-variables_v117.txt  symbols117.txt  symbols_v117.txt
disassemble/v130/: firmware_v130.txt  patch_v130.txt  sram-variables_v130.txt  symbols_v130.txt
disassemble/vibe/v113/: vibe_v113.sym  vibe_v113_ref.s
disassemble/vortex_core/builtin_core/: firmware_builtin_core.txt  symbols_builtin_core.sym  vortex_core_builtin_ref.s
disassemble/vortex_core/v104/: patch_v104.txt
disassemble/vortex_core/v145/: core_v145.s  core_v145.sym  symbols_v145.sym
doc/: MBIA043.html
doc/HT32F1655_56_FWLib_v102_960/: HT32_Retarget_VCP.inf
doc/HT32F1655_56_FWLib_v102_960/utilities/common/: spi_flash.h  (+3 more)
doc/MBIA043_files/: iw_sprite.css  translate_c.js  translate_un.html
dump/: extractpcap.sh  filter117.pcapng  to115.pcap  to117.pcapng  v130-builtin-update-good.pcapng  v130-update-bad.pcapng  v130-version.pcapng  v60mini.pcap
dump/descriptors/: core_qmk_desc.txt  pok3r_qmk_desc.txt  pok3r_rgb_desc.txt
firmware/: CMakeLists.txt  Makefile  Makefile.in  common.h  descriptor.c  ht32_usbd_descriptor.c  ht32f1654.ld  ht32f1655.cfg  ht32f1655.ld  ht32f165x.cfg  ht32f165x.s  ht32f165x_flash.S  linker.ld  main.c  main.h  openocd.cfg  pok3r-buspirate.cfg  pok3r-jlink.cfg  pok3r.ld  pok3r_custom.ld  pok3r_rgb_custom.ld  startup.s  win_mkdir.bat
firmware/board/: board.h  cortex-m3.c  cortex-m3.h  ht32f1654_cpu.h  ht32f1655_cpu.h  ht32f165x_cpu.h  pok3r_board.c  pok3r_board.h  pok3r_rgb_board.c  pok3r_rgb_board.h  types.h  vortex_core_board.c  vortex_core_board.h
firmware/board/cpu/: ht32.h  ht32f1654.h  ht32f1655.c  ht32f1655.h  ht32f165x.c  ht32f165x.h
firmware/board/ht32/: ht32.h  ht32_usb.c  ht32_usb.h  ht32f1654.c  ht32f1654.h  ht32f1655.h  ht32f165x.c  ht32f165x.h  startup.s
firmware/demo/: Makefile  linker.ld  system_ht32f165x.c  usbd.map
firmware/demo/lib/: ht32_usbd_core.c  ht32f1655_56_ckcu.h  ht32f1655_56_conf.h  ht32f1655_56_ebi.h  ht32f1655_56_flash.c  ht32f1655_56_pwrcu.h  ht32f1655_56_rtc.h  ht32f1655_56_sci.c  ht32f1655_56_sci.h  ht32f1655_56_usbd.c  ht32f1655_56_wdt.c  syscalls.c
firmware/usb/: descriptors.c  descriptors.h  usb.c  usb.h
pok3rtool/: 99-pok3r.rules  CMakeLists.txt  hiddevice.cpp  hiddevice.h  main.cpp  pok3r.cpp  pok3r.h  pok3r_rgb.cpp  pok3r_rgb.h  proto_cykb.cpp  proto_cykb.h  proto_pok3r.cpp  proto_pok3r.h  proto_qmkp.cpp  proto_qmkp.h  test.sh  updateinterface.h  updatepackage.cpp  updatepackage.h  usbdevice.cpp  usbdevice.h  vortex_core.cpp  vortex_core.h  vortex_tester.cpp  vortex_tester.h
pok3rtool/rawhid/: CMakeLists.txt  hid.h  hid_LINUX.c  hid_MACOSX.c  hid_WINDOWS.c  hiddevice.cpp  hiddevice.h
unlocker/: Makefile  ht32f1654.ld  ht32f1655.ld  main.c
unlocker/board/: startup.s
unlocker/board/ht32/: ht32f165x.h  ht32f165x_reg.h
util/: connect.jlink  flash.jlink  flash.py  mass-erase.jlink  protect1654.jlink  protect1655.jlink  unprotect.jlink  version-erase1654.jlink  version-erase1655.jlink
util/jlink_flashloader/: JLinkDevices.xml  README.md
util/jlink_flashloader/FlashLoader_HT32/: FlashLoader_HT32.emProject  MemoryMap.xml  Placement_debug.xml  Placement_release.xml
util/jlink_flashloader/FlashLoader_HT32_v2/: Flashloader_V5.34.emProject
util/jlink_flashloader/Holtek/: FlashLoader_HT32F1655.elf
util/update_package/: extract_all.py  updatepackage.py
vortex/: fw117.txt  to114.pcap  updater_strings.txt  v113.txt  ver117.pcapng
vortex/dump/: decrypted1  decrypted2  dump2
vortex/pok3r/: dump1
(+317 files in other folders)
